# skills-hub

./: .gitignore  AGENTS.md  LICENSE  README.md  README_en.md  README_zh-CN.md  README_zh.md  SECURITY.md  eslint.config.mjs  install.sh  package-lock.json  package.json  tailwind.config.ts
.lexcoding/: PROGRESS.md
.spec/: PLAN.md  PRD.md
.tmp-issues/: issue1.md  issue2.md  issue3.md  issue4.md  issue5.md  issue6.md
__tests__/: agent-registry-docs.test.ts  config-default-agents.test.ts  conflict-service.test.ts  conflicts-cli.test.ts  dashboard-project-packages.test.tsx  diagnose-cli.test.ts  git-validation.test.ts  import-skill.test.ts  kit-cli-offline.test.ts  kit-cli.test.ts  kit-core.test.ts  kit-loadout-import.test.ts  kit-panel-loadout-import.test.tsx  official-presets-catalog.test.ts  official-presets-cli.test.ts  path-entry-ui.test.tsx  path-picker.test.ts  profile-cli.test.ts  provider-cli.test.ts  provider-core.test.ts  provider-panel-confirm.test.tsx  scanner-cli.test.ts  scanner.test.ts  skill-filter.test.ts  skills-cli-enhancements.test.ts  snapshot-cli.test.ts  sync-cli.test.ts
app/: actions.ts  globals.css  layout.tsx  page.tsx
components/: AgentBrandIcon.tsx  AgentManagerModal.tsx  ConfirmProvider.tsx  CreateSkillModal.tsx  Dashboard.tsx  DeleteSkillModal.tsx  ImportSkillModal.tsx  IntroductionView.tsx  KitBrandIcon.tsx  KitPanel.tsx  ProviderPanel.tsx  SettingsModal.tsx  Sidebar.module.css  Sidebar.tsx  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+127 files in other folders)
